第一次提交

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ImageBrowseActivity"></activity>
+        <activity
+            android:name=".ImageBrowseActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            >
+        </activity>
     </application>
 
 </manifest>
